0.9/_sources/examples.txt
Examples
========

.. toctree::

    examples/_Binaries
    examples/_Ternaries
    examples/_Ternaries_of_Ternaries
    examples/_Strained_Ternaries
    examples/_Quaternaries
    examples/_GaPSb_on_InP
    examples/_Parameters
    examples/_Strained_Parameters
    examples/_References
    examples/_Plot_Bandgap_vs_Composition_of_Ternary
    examples/_Plot_Bandgap_vs_Composition_of_Quaternary3
    examples/_Plot_Band_Offset_vs_Composition_of_Ternary
    examples/_Plot_Bandgap_vs_Lattice_Constant
    examples/_Plot_Band_Offset_vs_Lattice_Constant
    examples/_Plot_Band_Offset_vs_Lattice_Constant_No_Phosphides
    examples/_Plot_Bandgap_vs_Lattice_Constant_of_Strained_Binaries
    examples/_Plot_Band_Offset_vs_Lattice_Constant_of_Strained_Binaries
    examples/_Plot_Bandgap_vs_Lattice_Constant_of_Quaternary1or2
    examples/_Plot_Bandgap_vs_Lattice_Constant_of_Quaternary3
    examples/_Plot_Valance_Band_Offset_vs_Lattice_Constant
    examples/_Plot_Conduction_Band_Offset_vs_Lattice_Constant
    examples/advanced
